--- a/TypeOTK/TypeOTK.csproj
+++ b/TypeOTK/TypeOTK.csproj
@@ -14,21 +14,25 @@
 		<Exec Command="cmd /c &quot;$(ProjectDir)../typer/dependency.py -p $(ProjectDir)../&quot;" />
 	</Target>
 	<ItemGroup>
-	  <None Remove="shader.frag" />
-	  <None Remove="shader.vert" />
-	</ItemGroup>
-	<ItemGroup>
-	  <Content Include="shader.frag">
+	  <Resource Include="shader.frag">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </Content>
-	  <Content Include="shader.vert">
+	  </Resource>
+	  <Resource Include="shader.vert">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </Content>
+	  </Resource>
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="OpenTK" Version="4.7.4" />
 	</ItemGroup>
 	<ItemGroup Label="TypeOModules">
 		<ProjectReference Name="TypeOCore" Include="D:/projects/typeo/typeocore/TypeOCore/TypeOCore.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+	  <None Update="shader.frag">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	  <None Update="shader.vert">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 </Project>
