--- a/TypeOTK/TypeOTK.csproj
+++ b/TypeOTK/TypeOTK.csproj
@@ -29,8 +29,23 @@
 	</ItemGroup>
 	<ItemGroup>
 		<PackageReference Include="OpenTK" Version="4.7.5" />
+		<PackageReference Include="SixLabors.ImageSharp" Version="2.1.3" />
+		<PackageReference Include="System.Drawing.Common" Version="6.0.0" />
 	</ItemGroup>
 	<ItemGroup Label="TypeOModules">
 		<ProjectReference Name="TypeOCore" Include="D:/projects/typeo/typeocore/TypeOCore/TypeOCore.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Reference Include="QuickFont.Desktop">
+	    <HintPath>dll\QuickFont.Desktop.dll</HintPath>
+	  </Reference>
+	  <Reference Include="SharpFont.NetStandard">
+	    <HintPath>dll\SharpFont.NetStandard.dll</HintPath>
+	  </Reference>
+	</ItemGroup>
+	<ItemGroup>
+	  <None Update="freetype6.dll">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 </Project>
