--- a/TypeOTK/TypeOTK.csproj
+++ b/TypeOTK/TypeOTK.csproj
@@ -1,6 +1,6 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFramework>net7.0</TargetFramework>
 		<RootNamespace>TypeOEngine</RootNamespace>
 		<Authors>Simon Haggren</Authors>
 		<Company>Typedeaf</Company>
@@ -11,41 +11,41 @@
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 	<Target Name="PreBuild" BeforeTargets="PreBuildEvent" Condition="'$(OS)' == 'Windows_NT'">
-		<Exec Command="cmd /c &quot;$(ProjectDir)../typer/typer.py dependency -p $(ProjectDir)../&quot;" />
+		<Exec Command="cmd /c &quot;$(ProjectDir)../typer/typer.py dependency -p $(ProjectDir)../&quot;"/>
 	</Target>
 	<ItemGroup>
-	  <Content Include="Shaders\tshader.frag">
-	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-	  </Content>
-	  <Content Include="Shaders\tshader.vert">
-	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-	  </Content>
-	  <Content Include="Shaders\shader.frag">
-	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-	  </Content>
-	  <Content Include="Shaders\shader.vert">
-	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-	  </Content>
+		<Content Include="Shaders\tshader.frag">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Shaders\tshader.vert">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Shaders\shader.frag">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="Shaders\shader.vert">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="OpenTK" Version="4.7.5" />
-		<PackageReference Include="SixLabors.ImageSharp" Version="2.1.3" />
-		<PackageReference Include="System.Drawing.Common" Version="6.0.0" />
+		<PackageReference Include="OpenTK" Version="4.7.5"/>
+		<PackageReference Include="SixLabors.ImageSharp" Version="2.1.3"/>
+		<PackageReference Include="System.Drawing.Common" Version="6.0.0"/>
 	</ItemGroup>
 	<ItemGroup Label="TypeOModules">
-		<ProjectReference Name="TypeOCore" Include="D:/projects/typeo/typeocore/TypeOCore/TypeOCore.csproj" />
+		<ProjectReference Name="TypeOCore" Include="D:/projects/typeo/typeocore/TypeOCore/TypeOCore.csproj"/>
 	</ItemGroup>
 	<ItemGroup>
-	  <Reference Include="QuickFont.Desktop">
-	    <HintPath>dll\QuickFont.Desktop.dll</HintPath>
-	  </Reference>
-	  <Reference Include="SharpFont.NetStandard">
-	    <HintPath>dll\SharpFont.NetStandard.dll</HintPath>
-	  </Reference>
+		<Reference Include="QuickFont.Desktop">
+			<HintPath>dll\QuickFont.Desktop.dll</HintPath>
+		</Reference>
+		<Reference Include="SharpFont.NetStandard">
+			<HintPath>dll\SharpFont.NetStandard.dll</HintPath>
+		</Reference>
 	</ItemGroup>
 	<ItemGroup>
-	  <None Update="freetype6.dll">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </None>
+		<None Update="freetype6.dll">
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</None>
 	</ItemGroup>
 </Project>
